--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,7 @@
     }
   }
 </style>
-
+<!-- 
 <main class="main">
   <div class="content">
     <div class="left-side">
@@ -322,7 +322,7 @@
       </div>
     </div>
   </div>
-</main>
+</main> -->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
@@ -331,6 +331,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<app-headbar/>
+<div class="RouterOutlet">
+  <router-outlet />
+</div>
 
-
-<router-outlet />
