--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+*
+    box-sizing: boder-box
+
+mat-toolbar
+    display:flex
+    position: fixed
+    justify-content: space-between
+    z-index: 9999
+
+.RouterOutlet
+    padding-top: 4rem
