--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -333,6 +333,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <app-headbar/>
 <div class="RouterOutlet">
-  <router-outlet />
+  <app-sidebar>
+    <router-outlet />
+  </app-sidebar>
 </div>
 
