--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -334,7 +334,21 @@
 <app-headbar/>
 <div class="RouterOutlet">
   <app-sidebar>
-    <router-outlet />
+     <!-- <app-navtab>
+    </app-navtab> -->
+    <nav mat-tab-nav-bar [tabPanel]="tabPanel">
+      <a 
+        *ngFor="let link of links"
+        mat-tab-link 
+        [active]="link.id === linkActive"
+        (click)="linkActive = link.id"
+        [routerLink]="link.url">
+        {{ link.label }}
+      </a>
+    </nav>
+    <mat-tab-nav-panel #tabPanel>
+      <router-outlet #outlet="outlet"/>
+    </mat-tab-nav-panel>
   </app-sidebar>
 </div>
 
