nav par component.onInit.

--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -1,5 +1,5 @@
 <p>test1 works!</p>
-<mat-slide-toggle>Toggle me!</mat-slide-toggle>
+<mat-slide-toggle (change)="toggleOnChange($event)">Toggle me!</mat-slide-toggle>
 s<br>
 s<br>
 s<br>
