--- a/src/app/common/component/navtabs/navtabs.component.html
+++ b/src/app/common/component/navtabs/navtabs.component.html
@@ -1,12 +1,21 @@
 <nav mat-tab-nav-bar [tabPanel]="tabPanel">
-    <a 
-      *ngFor="let link of links"
-      mat-tab-link 
-      [active]="link.active"
-      [routerLink]="link.url">
-      {{ link.label }}
-    </a>
+      <div 
+        *ngFor="let link of links"
+        mat-tab-link 
+        [active]="link.active">
+        <!-- GBE : travailler sur la zone clickable. -->
+        <div
+          [routerLink]="link.url"
+          class="link-content">{{ link.label }}
+        </div>
+        <button 
+          *ngIf="links.length > 1"
+          mat-icon-button
+          (click)="onClose(link)">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
   </nav>
   <mat-tab-nav-panel #tabPanel>
-    <ng-content></ng-content>>
+    <ng-content/>
   </mat-tab-nav-panel>
