--- a/src/app/tables/expandable1/expandable1.component.html
+++ b/src/app/tables/expandable1/expandable1.component.html
@@ -17,7 +17,9 @@
     <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" 
             [attr.colspan]="this.displayColumnsWithExpand.length">
-            <div lass="example-element-detail" [@detailExpand]="element.expanded ? 'expanded' : 'collapsed'">test</div>
+            <div class="example-element-detail" [@detailExpand]="element.expanded ? 'expanded' : 'collapsed'">
+                <div class="element-detail-description">{{element.description}}</div> 
+            </div>
         </td>
     </ng-container>
 
