--- a/src/app/tables/expandable-with-form/expandable-with-form.component.html
+++ b/src/app/tables/expandable-with-form/expandable-with-form.component.html
@@ -39,16 +39,16 @@
     <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let personne" [attr.colspan]="displayColumns.length">
             <div class="element-detail" [@detailExpand]="personne.get('expand').value ? 'expanded' : 'collapsed'">
-                <from [formGroup]="personne" class="detail-description">
-                <mat-form-field appearance="outline">
-                    <mat-label>Nom</mat-label>
-                    <input matInput [formControl]="personne.get('nom')">
-                </mat-form-field>
-                <mat-form-field appearance="outline">
-                    <mat-label>Prenom</mat-label>
-                    <input matInput [formControl]="personne.get('prenom')">
-                </mat-form-field>
-            </from>
+                <div  [formGroup]="personne" class="detail-description">
+                    <mat-form-field appearance="outline" class="flexItem">
+                        <mat-label>Nom</mat-label>
+                        <input matInput [formControl]="personne.get('nom')">
+                    </mat-form-field>
+                    <mat-form-field appearance="outline" class="flexItem">
+                        <mat-label>Prenom</mat-label>
+                        <input matInput [formControl]="personne.get('prenom')">
+                    </mat-form-field>
+                </div>
             </div>
             <!-- <div class="element-detail" [@detailExpand]="element.expand ? 'expanded' : 'collapsed'" [formGroup]="element">
                 
