--- a/src/app/tables/expandable-with-form/expandable-with-form.component.sass
+++ b/src/app/tables/expandable-with-form/expandable-with-form.component.sass
@@ -1,12 +1,20 @@
 tr.detail-row
     height: 0
 
-.element-detail
-    overflow: hidden
-    display: flex
+// .element-detail
+//     overflow: hidden
+//     display: flex
+    // justify-content: space-between
+    // padding: 16px
 
 tr.element-row td
     border-bottom-width: 0
 
 .detail-description
+    overflow: hidden
+    display: flex
+    justify-content: space-around
     padding: 16px
+
+.flexItem
+    width: 45%
