--- a/src/app/table/comme-order-line/comme-order-line.component.html
+++ b/src/app/table/comme-order-line/comme-order-line.component.html
@@ -1,10 +1,10 @@
-<table mat-table [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows>
     <!-- Position Column -->
     <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef>
             <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'No.', inputName: 'position' }" ></ng-container>
         </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.value.position}} </td>
     </ng-container>
 
     <!-- Name Column -->
@@ -12,7 +12,7 @@
         <th mat-header-cell *matHeaderCellDef>
             <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'Name', inputName: 'name'}" ></ng-container>
         </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.value.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
@@ -20,7 +20,7 @@
         <th mat-header-cell *matHeaderCellDef>
             <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'Weight', inputName: 'weight'}" ></ng-container>
         </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.value.weight}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
@@ -28,9 +28,10 @@
         <th mat-header-cell *matHeaderCellDef>
             <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'Symbol', inputName: 'symbol'}" ></ng-container>
         </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.value.symbol}} </td>
     </ng-container>
 
+    <!-- définition des colonnes -->
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr> 
 </table>
