--- a/src/app/table/comme-order-line/comme-order-line.component.html
+++ b/src/app/table/comme-order-line/comme-order-line.component.html
@@ -1,39 +1,47 @@
 <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>
-            <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'No.', inputName: 'position' }" ></ng-container>
-        </th>
-        <td mat-cell *matCellDef="let element"> {{element.value.position}} </td>
+
+    <!-- définition de la colonne d'expand -->
+    <ng-container matColumnDef="expand">
+        <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+        <td mat-cell *matCellDef="let fgElement">
+            <button mat-icon-button (click)="toggleExpand(fgElement)">
+                <mat-icon>{{fgElement.value.expand ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</mat-icon>
+            </button>
+        </td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>
-            <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'Name', inputName: 'name'}" ></ng-container>
-        </th>
-        <td mat-cell *matCellDef="let element"> {{element.value.name}} </td>
+    <!-- définition des colonnes de données. -->
+    @for(col of dataColumns; track col){
+        <ng-container [matColumnDef]="col.propName">
+            <th mat-header-cell *matHeaderCellDef>
+                <ng-container *ngTemplateOutlet="headerTemplate;context: {title: col.header, inputName: col.propName }" ></ng-container>
+            </th>
+            <td mat-cell *matCellDef="let fgElement"> {{fgElement.value[col.propName]}} </td>
+        </ng-container>    
+    }
+
+    <!-- définition du sous-formulaire. -->
+    <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="displayColumns.length">
+            <div class="element-detail" [@detailExpand]="element.get('expand').value ? 'expanded' : 'collapsed'">
+                <div  [formGroup]="element" class="detail-description">
+                    <mat-form-field appearance="outline" class="flexItem">
+                        <mat-label>No.</mat-label>
+                        <input matInput [formControl]="element.get('position')">
+                    </mat-form-field>
+                    <mat-form-field appearance="outline" class="flexItem">
+                        <mat-label>Name</mat-label>
+                        <input matInput [formControl]="element.get('name')">
+                    </mat-form-field>
+                </div>
+            </div>
+        </td>
     </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef>
-            <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'Weight', inputName: 'weight'}" ></ng-container>
-        </th>
-        <td mat-cell *matCellDef="let element"> {{element.value.weight}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef>
-            <ng-container *ngTemplateOutlet="headerTemplate;context: {title: 'Symbol', inputName: 'symbol'}" ></ng-container>
-        </th>
-        <td mat-cell *matCellDef="let element"> {{element.value.symbol}} </td>
-    </ng-container>
-
-    <!-- définition des colonnes -->
+    <!-- définition des lignes -->
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr> 
+    <tr mat-row *matRowDef="let row; columns: displayColumns;" class="element-row"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 </table>
 <div class="headerContainer">
     <div>
@@ -52,5 +60,4 @@
             <input matInput type="text" [formControlName]="inputName">
         </div>
     </div>
-    
 </ng-template>
