--- a/src/app/table/comme-order-line/comme-order-line.component.sass
+++ b/src/app/table/comme-order-line/comme-order-line.component.sass
@@ -1,3 +1,4 @@
+// Pour les headers.
 .headerContainer
     display: flex
     flex-direction: column
@@ -6,3 +7,19 @@
     width: 90%
     input
         width: inherit
+
+// Pour le sous-formulaire.
+tr.detail-row
+    height: 0
+
+tr.element-row td
+    border-bottom-width: 0
+
+.detail-description
+    overflow: hidden
+    display: flex
+    justify-content: space-around
+    padding: 16px
+
+.flexItem
+    width: 45%
