--- a/src/app/tables/comme-order-line/comme-order-line.component.html
+++ b/src/app/tables/comme-order-line/comme-order-line.component.html
@@ -1,5 +1,22 @@
 <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
 
+    <!-- définition de la colonne de selection -->
+    <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox
+                (change)="$event ? toggleAllRows() : null"
+                [checked]="selection.hasValue() && isAllSelected()"
+                [indeterminate]="selection.hasValue() && !isAllSelected()"/>
+        </th>
+        <td mat-cell *matCellDef="let fgElement">
+            <mat-checkbox
+                (click)="$event.stopPropagation()"
+                (change)="$event ? selection.toggle(fgElement) : null"
+                [checked]="selection.isSelected(fgElement)"/>
+        </td>
+    </ng-container>
+    
+
     <!-- définition de la colonne d'expand -->
     <ng-container matColumnDef="expand">
         <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
