--- a/src/app/tables/comme-order-line/comme-order-line.component.html
+++ b/src/app/tables/comme-order-line/comme-order-line.component.html
@@ -19,7 +19,13 @@
 
     <!-- définition de la colonne d'expand -->
     <ng-container matColumnDef="expand">
-        <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+        <!-- pour une colonne vide :
+        <th mat-header-cell *matHeaderCellDef>&nbsp;</th> -->
+        <th mat-header-cell *matHeaderCellDef>
+            <button mat-icon-button (click)="closeAllExpand()">
+                <mat-icon>keyboard_double_arrow_up</mat-icon>
+            </button>
+        </th>
         <td mat-cell *matCellDef="let fgElement">
             <button mat-icon-button (click)="toggleExpand(fgElement)">
                 <mat-icon>{{openedSsf.isSelected(fgElement) ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</mat-icon>
@@ -65,6 +71,8 @@
         <td class="mat-cell" [attr.colspan]="displayColumns.length">Pas de donnée trouvé.</td>
     </tr>
 </table>
+<!-- pagigation du tableau -->
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"/>
 <div class="headerContainer">
     <div>
         formulaire de filtre : 
