--- a/src/app/tables/comme-order-line/comme-order-line.component.sass
+++ b/src/app/tables/comme-order-line/comme-order-line.component.sass
@@ -23,3 +23,7 @@ tr.element-row td
 
 .flexItem
     width: 45%
+
+    // TODO GBE : pourquoi il me faut l'important ? (flex ?)
+.mat-mdc-table-sticky
+    background-color: LightGray !important
