--- a/src/app/tables/comme-order-line/comme-order-line.component.sass
+++ b/src/app/tables/comme-order-line/comme-order-line.component.sass
@@ -1,3 +1,15 @@
+// pour le body :
+.bodyContainer
+    display: flex
+    flex-direction: column
+
+.selectColumnButton
+    padding: 10px
+    align-self: flex-end
+
+table
+    width: 100%
+
 // Pour les headers.
 .headerContainer
     display: flex
@@ -27,3 +39,8 @@ tr.element-row td
     // TODO GBE : pourquoi il me faut l'important ? (flex ?)
 .mat-mdc-table-sticky
     background-color: LightGray !important
+
+.menu-content
+    display: flex
+    flex-direction: column
+    flex-wrap: nowrap
