--- a/src/app/tables/comme-order-line/comme-order-line.component.html
+++ b/src/app/tables/comme-order-line/comme-order-line.component.html
@@ -21,11 +21,11 @@
     </mat-menu>
 </div>
 
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort>
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows cdkDropListGroup matSort>
 
     <!-- définition de la colonne de selection -->
     <ng-container matColumnDef="select" [sticky]="true">
-        <th mat-header-cell *matHeaderCellDef>
+        <th mat-header-cell *matHeaderCellDef rowspan="2">
             <mat-checkbox
                 (change)="$event ? toggleAllRows() : null"
                 [checked]="selection.hasValue() && isAllSelected()"
@@ -44,7 +44,7 @@
     <ng-container matColumnDef="expand">
         <!-- pour une colonne vide :
         <th mat-header-cell *matHeaderCellDef>&nbsp;</th> -->
-        <th mat-header-cell *matHeaderCellDef>
+        <th mat-header-cell *matHeaderCellDef rowspan="2">
             <button mat-icon-button (click)="closeAllExpand()">
                 <mat-icon>keyboard_double_arrow_up</mat-icon>
             </button>
@@ -58,18 +58,27 @@
 
     <!-- définition des colonnes de données. -->
     @for(col of dataColumns; track col){
-        <ng-container [matColumnDef]="col.propName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                <ng-container *ngTemplateOutlet="headerTemplate;context: {title: col.header, inputName: col.propName }" ></ng-container>
+        <ng-container [matColumnDef]="col.propName" >
+            <th 
+                mat-header-cell 
+                *matHeaderCellDef 
+                mat-sort-header
+                cdkDropList 
+                cdkDropListLockAxis="x"
+                cdkDropListOrientation="horizontal"
+                (cdkDropListDropped)="tableColumnDropped($event)"
+                cdkDrag
+                (cdkDragStarted)="tableColumnStarted($event)"
+                [cdkDragData]="col">
+                {{col.header}}
             </th>
             <td mat-cell *matCellDef="let fgElement"> {{fgElement.value[col.propName]}} </td>
         </ng-container>    
     }
 
     <ng-container [matColumnDef]="'action'" [stickyEnd]="true">
-        <th mat-header-cell *matHeaderCellDef>
-            <ng-container *ngTemplateOutlet="headerTemplate; context: {title: 'Action'}"></ng-container>
-            
+        <th mat-header-cell *matHeaderCellDef rowspan="2">
+            Action
         </th>
         <td mat-cell *matCellDef="let fgElement">TODO GBE</td>
     </ng-container>
@@ -93,8 +102,21 @@
         </td>
     </ng-container>
 
+    <!-- Définition des filtres. -->
+    <ng-container matColumnDef="noFilter">
+        <th mat-header-cell *matHeaderCellDef></th>
+    </ng-container>
+    <ng-container *ngFor="let colName of filterColumns" [matColumnDef]="colName">
+        <th mat-header-cell *matHeaderCellDef [formGroup]="fgFilter">
+            <input class="headerElement" matInput type="text" [formControlName]="getFilterControlName(colName)">
+        </th>
+    </ng-container>
+    
+    
+
     <!-- définition des lignes -->
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="filterColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns;" class="element-row"></tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 
@@ -113,15 +135,4 @@
         {{this.fgFilter.value | json }}
     </div>
 </div>
-
-<!-- deff header-container -->
-<ng-template #headerTemplate let-title="title" let-inputName="inputName">
-    <div class="headerContainer">
-        <div class="headerElement">{{title}}</div>
-        <div class="headerElement" [formGroup]="fgFilter" *ngIf="inputName">
-            <input matInput type="text" [formControlName]="inputName">
-        </div>
-        <div class="headerElement" *ngIf="!inputName">&nbsp;</div>
-    </div>
-</ng-template>
 </div>
