--- a/src/app/tables/comme-order-line/comme-order-line.component.sass
+++ b/src/app/tables/comme-order-line/comme-order-line.component.sass
@@ -15,10 +15,11 @@ table
     display: flex
     flex-direction: column
 
-.headerElement
+.FilterContainer
+    display: flex
+
+.FilterInput
     width: 90%
-    input
-        width: inherit
 
 // Pour le sous-formulaire.
 tr.detail-row
