--- a/src/app/common/component/headbar/headbar.component.html
+++ b/src/app/common/component/headbar/headbar.component.html
@@ -1,3 +1,7 @@
 <mat-toolbar>
     <h1>Petit site pour mes tests avec angular material</h1>
+    <span class="spacer"></span>
+    <button mat-icon-button (click)="afficherState()">
+        <mat-icon>share</mat-icon>
+    </button>
 </mat-toolbar>
