--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -1,5 +1,10 @@
 <p>test1 works!</p>
-<mat-slide-toggle (change)="toggleOnChange($event)">Toggle me!</mat-slide-toggle>
+<mat-slide-toggle (change)="toggleOnChange($event)">Toggle me!</mat-slide-toggle><br/>
+<button mat-button (click)="testDialog1()">Yes/No test1</button><br/>
+<button mat-button (click)="testDialog2()">Yes/No test2</button><br/>
+<button mat-button (click)="testDialog3()">Yes/No test3</button><br/>
+<button mat-button (click)="testDialog4()">Yes/No test4</button><br/>
+<p>résultat du dialog : {{resultDialog}} </p>
 s<br>
 s<br>
 s<br>
