--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -4,6 +4,7 @@
 <button mat-button (click)="testDialog2()">Yes/No test2</button><br/>
 <button mat-button (click)="testDialog3()">Yes/No test3</button><br/>
 <button mat-button (click)="testDialog4()">Yes/No test4</button><br/>
+<button mat-button (click)="testDialog5()">Yes/No test5</button><br/>
 <p>résultat du dialog : {{resultDialog}} </p>
 s<br>
 s<br>
