--- a/src/app/test-diag-on-close/test-diag-on-close.component.html
+++ b/src/app/test-diag-on-close/test-diag-on-close.component.html
@@ -4,4 +4,4 @@
     <mat-radio-button [value]="true">Oui</mat-radio-button>
     <mat-radio-button [value]="false">Non</mat-radio-button>
 </mat-radio-group>
-<input matInput type="text"/>
+<input matInput type="text" [formControl]="formData"/>
