--- a/src/app/truc/truc.component.scss
+++ b/src/app/truc/truc.component.scss
@@ -1,3 +1,5 @@
+@use '@angular/material' as mat;
+
 .full-width {
   width: 100%;
 }
@@ -15,6 +17,7 @@
 .row {
   display: flex;
   flex-direction: row;
+  // color: mat.$violet-palette,
 }
 
 .col {
