--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -27,7 +27,8 @@ $testMaterial-theme: mat.define-light-theme((
     warn: $testMaterial-warn,
   ),
   typography: mat.define-typography-config(),
-  density: 0
+  density: -5
+  // density: 0
 ));
 
 // Include theme styles for core and each component used in your app.
