actions save & close(enfin presque...)

--- a/src/app/common/component/form-frame/form-frame.component.html
+++ b/src/app/common/component/form-frame/form-frame.component.html
@@ -1,13 +1,14 @@
 <div class="titleContainer">
     <h3 *ngIf="frameModel?.title != undefined">{{frameModel?.title}}</h3>
-    <ng-container *ngTemplateOutlet="saveButton"></ng-container>
+    <ng-container *ngTemplateOutlet="saveButtons"/>
 </div>
 <h4 *ngIf="frameModel?.name != undefined">{{frameModel?.name}}</h4>
 <P>Liste des boutons paramètrables.</P>
 <ng-content/>
-<ng-container *ngTemplateOutlet="saveButton"></ng-container>
+<ng-container *ngTemplateOutlet="saveButtons"/>
 
-<ng-template #saveButton>
+<!-- template de bouton save utilisé en header & footer. -->
+<ng-template #saveButtons>
     <p class="buttonSaveContainer">
         <button 
             *ngIf="frameModel?.saveButton?.isVisible ?? false"
@@ -20,6 +21,9 @@
             [disabled]="!frameModel?.saveButton?.isAvailable"
             mat-raised-button
             >Save & close</button>
-        <button mat-raised-button>close</button>
+        <button 
+            (click)="frameModel!.closeAction!.next(undefined)"
+            mat-raised-button
+            >close</button>
     </p>
 </ng-template>
