--- a/src/app/truc/truc.component.html
+++ b/src/app/truc/truc.component.html
@@ -98,5 +98,5 @@
       </mat-card-actions>
     </mat-card>
   </form>
-  <p>{{addressForm.status}}</p>
+  <p>status: {{addressForm.status}}, dirty : {{addressForm.dirty}}</p>
 </app-form-frame>
