--- a/src/app/truc/truc.component.html
+++ b/src/app/truc/truc.component.html
@@ -1,4 +1,4 @@
-<app-form-frame [frameModel]="frameModel">
+<app-form-frame [frameModel]="frameModel" [formData]="addressForm">
   <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
     <mat-card class="shipping-card">
       <mat-card-header>
@@ -93,9 +93,9 @@
           </div>
         </div>
       </mat-card-content>
-      <mat-card-actions>
+      <!-- <mat-card-actions>
         <button mat-raised-button color="primary" type="submit">Submit</button>
-      </mat-card-actions>
+      </mat-card-actions> -->
     </mat-card>
   </form>
   <p>status: {{addressForm.status}}, dirty : {{addressForm.dirty}}</p>
