--- a/src/app/common/component/form-frame/form-frame.component.scss
+++ b/src/app/common/component/form-frame/form-frame.component.scss
@@ -6,6 +6,14 @@
     }
 }
 
+.buttonsContainer {
+    display: flex;
+    flex-direction: row;
+    & > * {
+        margin-left: 10px;
+    }
+}
+
 .buttonSaveContainer {
     display: flex;
     // flex-direction: row-reverse;
